--- a/python3/asset_type_4_tests.ipynb
+++ b/python3/asset_type_4_tests.ipynb
@@ -125,7 +125,9 @@
     "* Issuer gets to decide the name, transferable or not, expiry or not, redeemable or not, and can add multiple/additional attributes (HashMap) on the same State/Asset.\n",
     "* Applications like Government Bond, will be transferable, with maturity(some expiry), and redeemable (cash the principal on maturity), with additional attribute of coupon payment dates.\n",
     "* Applications like College University Degree, will not be transferable, no expiry, and not redeemable. Will have additional attributes like Collage Name, University Name, Education Stream etc etc along with Issuer and Owner(Holder).\n",
-    "* Applications like Limited Edition Sovereign, will be transferable, no expiry but will be redeemable directly with Issuer."
+    "* Applications like Limited Edition Sovereign, will be transferable, no expiry but will be redeemable directly with Issuer.\n",
+    "\n",
+    "In Asset type 4, all the issuing should be succeed, with **Non-Transferable** and **Non-Quantifiable** assets."
    ]
   },
   {
@@ -910,7 +912,7 @@
     "* If transferable -- will work on the basic nature of the instrument decided right from the issue point(by the issuer).\n",
     "* Check = not expired apart from being owned.\n",
     "\n",
-    "For Type 4, as it's non tranferable, all the transfer will expected to be failure."
+    "For Asset Type 4, as it's non tranferable, all the transfer should be **failure**."
    ]
   },
   {
@@ -1048,7 +1050,7 @@
     "* If permitted, it will work on the basic nature of the instrument decided right from the issue point(by the issuer).\n",
     "* In Asset type 1, all the redeems apart from non holders should be succeed\n",
     "\n",
-    "For Asset type 4, all the redeems apart from non holders should be succeed"
+    "For Asset type 4, all the redeems apart from non holders should be **succeed*."
    ]
   },
   {
