--- a/python3/asset_type_3_tests.ipynb
+++ b/python3/asset_type_3_tests.ipynb
@@ -1,27 +1,42 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "2536df68",
+   "id": "5d7633fc",
    "metadata": {},
    "source": [
-    "## Asset Type 3\n",
-    "* Use Case Matrix:\n",
+    "# Asset Type 3\n",
     "\n",
-    "| Type     | Transferable    | Quantifiable     | Examples, Samples, Use Cases                  |\n",
-    "|----------|-----------------|------------------|-----------------------------------------------|\n",
-    "| 3        | N               | Y                | Travel points, Redeemable Tokens              |\n",
-    "|          |                 |                  | Amazon Vouchers                               |"
+    "## Examples, Samples, Use cases:\n",
+    "\n",
+    "* Travel points, Redeemable Tokens\n",
+    "* Amazon Vouchers\n",
+    "* ...\n",
+    "\n",
+    "## Attributes:\n",
+    "\n",
+    "* Transferable ❌\n",
+    "* Quantifiable ✅\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "446287fc",
+   "id": "6ae840c8",
+   "metadata": {},
+   "source": [
+    "## Tests:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f638d0",
    "metadata": {},
    "source": [
     "### Initialisation:\n",
-    "* The initialisation is for initialise the python scripts in the notebook get it connected to CorDapp.\n",
-    "* Expected to see a base directory path."
+    "\n",
+    "The initialisation is for initialise the python scripts in the notebook get it connected to CorDapp. \\\n",
+    "Expected to see a _base directory_ path."
    ]
   },
   {
@@ -1783,7 +1798,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
+  "celltoolbar": "Raw Cell Format",
   "extensions": {
    "jupyter_dashboards": {
     "activeView": "grid_default",
@@ -1818,7 +1833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
