--- a/python3/asset_type_4_tests.ipynb
+++ b/python3/asset_type_4_tests.ipynb
@@ -1,27 +1,42 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "fc95041b",
+   "id": "b02148af",
    "metadata": {},
    "source": [
-    "## Asset Type 4\n",
-    "* Use Case Matrix:\n",
+    "# Asset Type 4\n",
     "\n",
-    "| Type   | Transferable   | Quantifiable   | Examples, Samples, Use Cases                               |\n",
-    "|--------|----------------|----------------|------------------------------------------------------------|\n",
-    "| 4      | N              | N              | Graduation certificate                                     |\n",
-    "|        |                |                | Experience/Participation certificate (Credentials)         |"
+    "## Examples, Samples, Use cases:\n",
+    "\n",
+    "* Graduation certificate\n",
+    "* Experience/Participation certificate (Credentials)\n",
+    "* ...\n",
+    "\n",
+    "## Attributes:\n",
+    "\n",
+    "* Transferable ❌\n",
+    "* Quantifiable ❌\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "393cf1c8",
+   "id": "6ae840c8",
    "metadata": {},
    "source": [
-    "#### Initialisation:\n",
-    "* The initialisation is for initialise the python scripts in the notebook get it connected to CorDapp.\n",
-    "* Expected to see a base directory path."
+    "## Tests:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f638d0",
+   "metadata": {},
+   "source": [
+    "### Initialisation:\n",
+    "\n",
+    "The initialisation is for initialise the python scripts in the notebook get it connected to CorDapp. \\\n",
+    "Expected to see a _base directory_ path."
    ]
   },
   {
@@ -1850,7 +1865,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "extensions": {
    "jupyter_dashboards": {
     "activeView": "grid_default",
@@ -1885,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
